overflow hidden en card - fix texto abajo que disparaba animacion. Pruebas de header

--- a/staticgaeweb/www/css/styles.css
+++ b/staticgaeweb/www/css/styles.css
@@ -8,17 +8,18 @@ body, html{
 
 h1 {
   font-family: 'Roboto';
-  letter-spacing: 5px;
-  color: white;
+  letter-spacing: 2px;
+  color: rgb(13, 46, 117);
   text-align: center;
-  margin: 16px;
+  padding: 16px;
+  background-color: rgba(120, 174, 245, 0.82);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.28);
 }
 
 .main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 100%;
   padding: 2rem;
 }
 
@@ -31,11 +32,12 @@ h1 {
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
   border-radius: 4px;
   margin: 16px;
+  overflow: hidden;
 }
 
 .card img {
-  width: 15rem;
-  height: 20rem;
+  width: 100%;
+  height: 100%;
   opacity: 0.5;
   border-radius: 4px; 
   transition: all 0.5s ease-in-out;
@@ -52,7 +54,6 @@ h1 {
   text-align: center;
   background-color: rgba(7, 51, 70, 0.66);
   font-family: 'Source Sans Pro';
-
   transition: all 0.5s ease-in-out; 
 }
 
